parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT
    DOT
    SEMICOLON

Grammar

Rule 0     S' -> language
Rule 1     language -> mathpy
Rule 2     mathpy -> PROGRAM ID COLON declarations subroutines blocks END
Rule 3     mathpy -> PROGRAM ID COLON declarations subroutines blocks END PROGRAM
Rule 4     mathpy -> PROGRAM ID COLON declarations subroutines blocks END PROGRAM ID
Rule 5     declarations -> type COLON COLON variables declarations
Rule 6     declarations -> empty
Rule 7     type -> INTEGER
Rule 8     type -> REAL
Rule 9     variables -> variables COMMA ID
Rule 10    variables -> variables COMMA ID LPAREN INT RPAREN
Rule 11    variables -> variables COMMA ID LPAREN INT COMMA INT RPAREN
Rule 12    variables -> ID
Rule 13    variables -> ID LPAREN INT RPAREN
Rule 14    variables -> ID LPAREN INT COMMA INT RPAREN
Rule 15    matrix -> ID
Rule 16    matrix -> ID LPAREN INT RPAREN
Rule 17    matrix -> ID LPAREN INT COMMA INT RPAREN
Rule 18    matrix -> ID LPAREN ID RPAREN
Rule 19    matrix -> ID LPAREN ID COMMA ID RPAREN
Rule 20    index -> arithmetic COMMA arithmetic
Rule 21    index -> arithmetic
Rule 22    subroutines -> subroutines SUBROUTINE id_subroutine LPAREN RPAREN blocks END
Rule 23    subroutines -> subroutines SUBROUTINE id_subroutine LPAREN RPAREN blocks END SUBROUTINE
Rule 24    subroutines -> subroutines SUBROUTINE id_subroutine LPAREN RPAREN blocks END SUBROUTINE ID
Rule 25    subroutines -> empty
Rule 26    id_subroutine -> ID
Rule 27    blocks -> blocks assignment
Rule 28    blocks -> blocks if comparison then_if blocks conditionals END IF
Rule 29    blocks -> blocks do blocks IF comparison then_if blocks exit END IF blocks END DO
Rule 30    blocks -> blocks do assignment_do COMMA arithmetic colon blocks END DO
Rule 31    blocks -> blocks do assignment_do COMMA arithmetic colon IF comparison then_if blocks exit END IF blocks END DO
Rule 32    blocks -> blocks ID LPAREN RPAREN
Rule 33    blocks -> blocks READ TIMES COMMA matrix
Rule 34    blocks -> blocks PRINT TIMES COMMA matrix
Rule 35    blocks -> blocks PRINT TIMES COMMA STRING
Rule 36    blocks -> empty
Rule 37    do -> DO
Rule 38    colon -> COLON
Rule 39    assignment_do -> ID ASSIGN arithmetic
Rule 40    exit -> EXIT
Rule 41    if -> IF
Rule 42    then_if -> THEN
Rule 43    conditionals -> else blocks
Rule 44    conditionals -> else IF comparison then_if blocks conditionals
Rule 45    conditionals -> else
Rule 46    else -> ELSE
Rule 47    else -> empty
Rule 48    assignment -> matrix ASSIGN arithmetic
Rule 49    arithmetic -> arithmetic PLUS term
Rule 50    arithmetic -> arithmetic MINUS term
Rule 51    arithmetic -> term
Rule 52    term -> term TIMES factor
Rule 53    term -> term DIVIDE factor
Rule 54    term -> factor
Rule 55    factor -> INT
Rule 56    factor -> FLOAT
Rule 57    factor -> matrix
Rule 58    factor -> LPAREN arithmetic RPAREN
Rule 59    comparison -> comparison OR comparisontwo
Rule 60    comparison -> comparisontwo
Rule 61    comparisontwo -> comparisontwo AND comparisonthree
Rule 62    comparisontwo -> comparisonthree
Rule 63    comparisonthree -> comparisonthree EQ comparisonfour
Rule 64    comparisonthree -> comparisonthree NEQ comparisonfour
Rule 65    comparisonthree -> comparisonthree LT comparisonfour
Rule 66    comparisonthree -> comparisonthree GT comparisonfour
Rule 67    comparisonthree -> comparisonthree LTE comparisonfour
Rule 68    comparisonthree -> comparisonthree GTE comparisonfour
Rule 69    comparisonthree -> comparisonfour
Rule 70    comparisonfour -> INT
Rule 71    comparisonfour -> FLOAT
Rule 72    comparisonfour -> matrix
Rule 73    comparisonfour -> LPAREN arithmetic RPAREN
Rule 74    comparisonfour -> LPAREN comparison RPAREN
Rule 75    empty -> <empty>

Terminals, with rules where they appear

AND                  : 61
ASSIGN               : 39 48
COLON                : 2 3 4 5 5 38
COMMA                : 9 10 11 11 14 17 19 20 30 31 33 34 35
COMMENT              : 
DIVIDE               : 53
DO                   : 29 30 31 37
DOT                  : 
ELSE                 : 46
END                  : 2 3 4 22 23 24 28 29 29 30 31 31
EQ                   : 63
EXIT                 : 40
FLOAT                : 56 71
GT                   : 66
GTE                  : 68
ID                   : 2 3 4 4 9 10 11 12 13 14 15 16 17 18 18 19 19 19 24 26 32 39
IF                   : 28 29 29 31 31 41 44
INT                  : 10 11 11 13 14 14 16 17 17 55 70
INTEGER              : 7
LPAREN               : 10 11 13 14 16 17 18 19 22 23 24 32 58 73 74
LT                   : 65
LTE                  : 67
MINUS                : 50
NEQ                  : 64
OR                   : 59
PLUS                 : 49
PRINT                : 34 35
PROGRAM              : 2 3 3 4 4
READ                 : 33
REAL                 : 8
RPAREN               : 10 11 13 14 16 17 18 19 22 23 24 32 58 73 74
SEMICOLON            : 
STRING               : 35
SUBROUTINE           : 22 23 23 24 24
THEN                 : 42
TIMES                : 33 34 35 52
error                : 

Nonterminals, with rules where they appear

arithmetic           : 20 20 21 30 31 39 48 49 50 58 73
assignment           : 27
assignment_do        : 30 31
blocks               : 2 3 4 22 23 24 27 28 28 29 29 29 29 30 30 31 31 31 32 33 34 35 43 44
colon                : 30 31
comparison           : 28 29 31 44 59 74
comparisonfour       : 63 64 65 66 67 68 69
comparisonthree      : 61 62 63 64 65 66 67 68
comparisontwo        : 59 60 61
conditionals         : 28 44
declarations         : 2 3 4 5
do                   : 29 30 31
else                 : 43 44 45
empty                : 6 25 36 47
exit                 : 29 31
factor               : 52 53 54
id_subroutine        : 22 23 24
if                   : 28
index                : 
language             : 0
mathpy               : 1
matrix               : 33 34 48 57 72
subroutines          : 2 3 4 22 23 24
term                 : 49 50 51 52 53
then_if              : 28 29 31 44
type                 : 5
variables            : 5 9 10 11

Parsing method: LALR

state 0

    (0) S' -> . language
    (1) language -> . mathpy
    (2) mathpy -> . PROGRAM ID COLON declarations subroutines blocks END
    (3) mathpy -> . PROGRAM ID COLON declarations subroutines blocks END PROGRAM
    (4) mathpy -> . PROGRAM ID COLON declarations subroutines blocks END PROGRAM ID

    PROGRAM         shift and go to state 3

    language                       shift and go to state 1
    mathpy                         shift and go to state 2

state 1

    (0) S' -> language .



state 2

    (1) language -> mathpy .

    $end            reduce using rule 1 (language -> mathpy .)


state 3

    (2) mathpy -> PROGRAM . ID COLON declarations subroutines blocks END
    (3) mathpy -> PROGRAM . ID COLON declarations subroutines blocks END PROGRAM
    (4) mathpy -> PROGRAM . ID COLON declarations subroutines blocks END PROGRAM ID

    ID              shift and go to state 4


state 4

    (2) mathpy -> PROGRAM ID . COLON declarations subroutines blocks END
    (3) mathpy -> PROGRAM ID . COLON declarations subroutines blocks END PROGRAM
    (4) mathpy -> PROGRAM ID . COLON declarations subroutines blocks END PROGRAM ID

    COLON           shift and go to state 5


state 5

    (2) mathpy -> PROGRAM ID COLON . declarations subroutines blocks END
    (3) mathpy -> PROGRAM ID COLON . declarations subroutines blocks END PROGRAM
    (4) mathpy -> PROGRAM ID COLON . declarations subroutines blocks END PROGRAM ID
    (5) declarations -> . type COLON COLON variables declarations
    (6) declarations -> . empty
    (7) type -> . INTEGER
    (8) type -> . REAL
    (75) empty -> .

    INTEGER         shift and go to state 9
    REAL            shift and go to state 10
    SUBROUTINE      reduce using rule 75 (empty -> .)
    END             reduce using rule 75 (empty -> .)
    ID              reduce using rule 75 (empty -> .)
    READ            reduce using rule 75 (empty -> .)
    PRINT           reduce using rule 75 (empty -> .)
    IF              reduce using rule 75 (empty -> .)
    DO              reduce using rule 75 (empty -> .)

    declarations                   shift and go to state 6
    type                           shift and go to state 7
    empty                          shift and go to state 8

state 6

    (2) mathpy -> PROGRAM ID COLON declarations . subroutines blocks END
    (3) mathpy -> PROGRAM ID COLON declarations . subroutines blocks END PROGRAM
    (4) mathpy -> PROGRAM ID COLON declarations . subroutines blocks END PROGRAM ID
    (22) subroutines -> . subroutines SUBROUTINE id_subroutine LPAREN RPAREN blocks END
    (23) subroutines -> . subroutines SUBROUTINE id_subroutine LPAREN RPAREN blocks END SUBROUTINE
    (24) subroutines -> . subroutines SUBROUTINE id_subroutine LPAREN RPAREN blocks END SUBROUTINE ID
    (25) subroutines -> . empty
    (75) empty -> .

    SUBROUTINE      reduce using rule 75 (empty -> .)
    END             reduce using rule 75 (empty -> .)
    ID              reduce using rule 75 (empty -> .)
    READ            reduce using rule 75 (empty -> .)
    PRINT           reduce using rule 75 (empty -> .)
    IF              reduce using rule 75 (empty -> .)
    DO              reduce using rule 75 (empty -> .)

    subroutines                    shift and go to state 11
    empty                          shift and go to state 12

state 7

    (5) declarations -> type . COLON COLON variables declarations

    COLON           shift and go to state 13


state 8

    (6) declarations -> empty .

    SUBROUTINE      reduce using rule 6 (declarations -> empty .)
    END             reduce using rule 6 (declarations -> empty .)
    ID              reduce using rule 6 (declarations -> empty .)
    READ            reduce using rule 6 (declarations -> empty .)
    PRINT           reduce using rule 6 (declarations -> empty .)
    IF              reduce using rule 6 (declarations -> empty .)
    DO              reduce using rule 6 (declarations -> empty .)


state 9

    (7) type -> INTEGER .

    COLON           reduce using rule 7 (type -> INTEGER .)


state 10

    (8) type -> REAL .

    COLON           reduce using rule 8 (type -> REAL .)


state 11

    (2) mathpy -> PROGRAM ID COLON declarations subroutines . blocks END
    (3) mathpy -> PROGRAM ID COLON declarations subroutines . blocks END PROGRAM
    (4) mathpy -> PROGRAM ID COLON declarations subroutines . blocks END PROGRAM ID
    (22) subroutines -> subroutines . SUBROUTINE id_subroutine LPAREN RPAREN blocks END
    (23) subroutines -> subroutines . SUBROUTINE id_subroutine LPAREN RPAREN blocks END SUBROUTINE
    (24) subroutines -> subroutines . SUBROUTINE id_subroutine LPAREN RPAREN blocks END SUBROUTINE ID
    (27) blocks -> . blocks assignment
    (28) blocks -> . blocks if comparison then_if blocks conditionals END IF
    (29) blocks -> . blocks do blocks IF comparison then_if blocks exit END IF blocks END DO
    (30) blocks -> . blocks do assignment_do COMMA arithmetic colon blocks END DO
    (31) blocks -> . blocks do assignment_do COMMA arithmetic colon IF comparison then_if blocks exit END IF blocks END DO
    (32) blocks -> . blocks ID LPAREN RPAREN
    (33) blocks -> . blocks READ TIMES COMMA matrix
    (34) blocks -> . blocks PRINT TIMES COMMA matrix
    (35) blocks -> . blocks PRINT TIMES COMMA STRING
    (36) blocks -> . empty
    (75) empty -> .

    SUBROUTINE      shift and go to state 15
    END             reduce using rule 75 (empty -> .)
    ID              reduce using rule 75 (empty -> .)
    READ            reduce using rule 75 (empty -> .)
    PRINT           reduce using rule 75 (empty -> .)
    IF              reduce using rule 75 (empty -> .)
    DO              reduce using rule 75 (empty -> .)

    blocks                         shift and go to state 14
    empty                          shift and go to state 16

state 12

    (25) subroutines -> empty .

    SUBROUTINE      reduce using rule 25 (subroutines -> empty .)
    END             reduce using rule 25 (subroutines -> empty .)
    ID              reduce using rule 25 (subroutines -> empty .)
    READ            reduce using rule 25 (subroutines -> empty .)
    PRINT           reduce using rule 25 (subroutines -> empty .)
    IF              reduce using rule 25 (subroutines -> empty .)
    DO              reduce using rule 25 (subroutines -> empty .)


state 13

    (5) declarations -> type COLON . COLON variables declarations

    COLON           shift and go to state 17


state 14

    (2) mathpy -> PROGRAM ID COLON declarations subroutines blocks . END
    (3) mathpy -> PROGRAM ID COLON declarations subroutines blocks . END PROGRAM
    (4) mathpy -> PROGRAM ID COLON declarations subroutines blocks . END PROGRAM ID
    (27) blocks -> blocks . assignment
    (28) blocks -> blocks . if comparison then_if blocks conditionals END IF
    (29) blocks -> blocks . do blocks IF comparison then_if blocks exit END IF blocks END DO
    (30) blocks -> blocks . do assignment_do COMMA arithmetic colon blocks END DO
    (31) blocks -> blocks . do assignment_do COMMA arithmetic colon IF comparison then_if blocks exit END IF blocks END DO
    (32) blocks -> blocks . ID LPAREN RPAREN
    (33) blocks -> blocks . READ TIMES COMMA matrix
    (34) blocks -> blocks . PRINT TIMES COMMA matrix
    (35) blocks -> blocks . PRINT TIMES COMMA STRING
    (48) assignment -> . matrix ASSIGN arithmetic
    (41) if -> . IF
    (37) do -> . DO
    (15) matrix -> . ID
    (16) matrix -> . ID LPAREN INT RPAREN
    (17) matrix -> . ID LPAREN INT COMMA INT RPAREN
    (18) matrix -> . ID LPAREN ID RPAREN
    (19) matrix -> . ID LPAREN ID COMMA ID RPAREN

    END             shift and go to state 19
    ID              shift and go to state 18
    READ            shift and go to state 25
    PRINT           shift and go to state 27
    IF              shift and go to state 22
    DO              shift and go to state 24

    assignment                     shift and go to state 20
    if                             shift and go to state 21
    do                             shift and go to state 23
    matrix                         shift and go to state 26

state 15

    (22) subroutines -> subroutines SUBROUTINE . id_subroutine LPAREN RPAREN blocks END
    (23) subroutines -> subroutines SUBROUTINE . id_subroutine LPAREN RPAREN blocks END SUBROUTINE
    (24) subroutines -> subroutines SUBROUTINE . id_subroutine LPAREN RPAREN blocks END SUBROUTINE ID
    (26) id_subroutine -> . ID

    ID              shift and go to state 29

    id_subroutine                  shift and go to state 28

state 16

    (36) blocks -> empty .

    END             reduce using rule 36 (blocks -> empty .)
    ID              reduce using rule 36 (blocks -> empty .)
    READ            reduce using rule 36 (blocks -> empty .)
    PRINT           reduce using rule 36 (blocks -> empty .)
    IF              reduce using rule 36 (blocks -> empty .)
    DO              reduce using rule 36 (blocks -> empty .)
    ELSE            reduce using rule 36 (blocks -> empty .)
    EXIT            reduce using rule 36 (blocks -> empty .)


state 17

    (5) declarations -> type COLON COLON . variables declarations
    (9) variables -> . variables COMMA ID
    (10) variables -> . variables COMMA ID LPAREN INT RPAREN
    (11) variables -> . variables COMMA ID LPAREN INT COMMA INT RPAREN
    (12) variables -> . ID
    (13) variables -> . ID LPAREN INT RPAREN
    (14) variables -> . ID LPAREN INT COMMA INT RPAREN

    ID              shift and go to state 31
